--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_demo
-spring.datasource.username= rajeevkumarsingh
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/sng
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
+# Turn off the java.sql.SQLFeatureNotSupportedException for createClob() method on server starting
+# Source : https://github.com/pgjdbc/pgjdbc/issues/1102
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Hibernate ddl auto (create, create-drop, validate, update) based on entity classes
 spring.jpa.hibernate.ddl-auto = update
+
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
